// Gym Website Project Database Schema
// DBML (Database Markup Language) - https://dbml.dbdiagram.io/docs
// This file documents the database structure for the gym management system
// Application Flow:
// - Project.web (UI) -> HTTP requests with JWT to Project.API
// - Project.API -> EF Core -> PostgreSQL (this schema)
// - Identity (AspNetUsers/Roles/UserRoles) shared by both layers

Table AspNetUsers {
  id integer [primary key]
  username varchar
  email varchar
  password_hash varchar
  phone_number varchar
  bio varchar
  gym_id integer
  created_at timestamp
  updated_at timestamp
}

Table AspNetRoles {
  id integer [primary key]
  name varchar
  description varchar
  created_at timestamp
}

Table AspNetUserRoles {
  user_id integer [not null]
  role_id integer [not null]
  created_at timestamp
}

Table Gyms {
  gym_id integer [primary key]
  name varchar [not null]
  address varchar
  phone_number varchar
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table Services {
  service_id integer [primary key]
  name varchar [not null]
  description varchar
  service_type varchar
  price decimal
  duration timespan
  gym_id integer [not null]
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
}

Table Appointments {
  appointment_id integer [primary key]
  date date [not null]
  time time [not null]
  user_id integer [not null]
  trainer_id integer [not null]
  service_id integer [not null]
  gym_id integer [not null]
  status varchar
  price decimal
  canceled_by varchar
  canceled_at timestamp
  created_at timestamp
}

// Relationships (Foreign Keys)

Ref user_gym: AspNetUsers.gym_id > Gyms.gym_id

Ref user_roles: AspNetUserRoles.user_id > AspNetUsers.id
Ref role_users: AspNetUserRoles.role_id > AspNetRoles.id

Ref gym_services: Services.gym_id > Gyms.gym_id

Ref appointment_member: Appointments.user_id > AspNetUsers.id
Ref appointment_trainer: Appointments.trainer_id > AspNetUsers.id
Ref appointment_service: Appointments.service_id > Services.service_id
Ref appointment_gym: Appointments.gym_id > Gyms.gym_id
